# pandoc-mermaid-filter

./: README.md  pyproject.toml
pandoc_mermaid_filter/: pandoc_mermaid_filter.py
